# CS553_Cloud_Computing

./: Readme.md
HW1/: README.md  generate-dataset.sh  plot.py  sort-data.sh
HW2/: README.md
HW3/: HPL-Result.out  Makefile  README.md  cpubench.c  matrixmul.h  perftest-result  perftest.sh  runbench.sh  test-result.md
HW3_Extra_Credit/: Makefile  README.md  cpubench.cpp  job.sh  perftest-result  perftest.sh
HW4/: README.md
HW5/: Makefile  README.md  gensort.sh  linux-sort.sh  mysort.c  mysort.h  run-mysort.sh
HW5/test_cpu_mem/: getavg.py  linuxsort1.txt  linuxsort16.txt  linuxsort4.txt  linuxsort64.txt  mysort1.txt  mysort16.txt  mysort4.txt  mysort64.txt
HW6/: README.md  SparkSort.java  core-site.xml  gensort.sh  hadoop.sh  hdfs-site.xml  linsort.sh  mapred-site.xml  pom.xml  spark-env.sh  spark.sh  yarn-site.xml
HW6/sortHadoop/: pom.xml
HW6/sortHadoop/src/main/java/org/cloud/computing/: HadoopSort.java
HW7/: CMakeLists.txt  HW7_plots.docx  Hw6_plot.docx  README.md  bench_cassandra.py  bench_mongodb.cpp  bench_redis.cpp  bench_redis.py  build-nodes.sh  cassandra.yaml  generate_keys.sh  generate_random_key_value.py  generate_values.sh  test_data.csv
